--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "caniuse-lite": "^1.0.30001570",
     "emailjs": "^4.0.0",
     "firebase": "^9.8.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-top-loading-bar": "^2.1.0",
     "swiper": "^8.2.2",
     "web-vitals": "^2.1.4"
